# meridian

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  requirements-ci.in  requirements-core.in  requirements-dev.in
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: ci.yml
configs/: base.yaml
docs/: data-notes.md  perf.md  week1-notes.md  week2-notes.md  week3-notes.md  week4-notes.md  week5-notes.md
docs/data/: data-notes.md  data-pipeline.md  data-specification.md
docs/engineering_log/: 01_foundation_and_data_contract.md  02_market_structure_and_pipeline.md  03_signal_generation_and_risk_controls.md  04_execution_lifecycle_and_management.md  05_evaluation_framework_and_reporting.md  README.md
docs/interview/: ARCHITECTURE.md  RESULTS.md
docs/reports/: qs_bt_20251225_192408.md
docs/system/: ARCHITECTURE.md  PERFORMANCE.md  STRATEGY_RESULTS.md  STRATEGY_SPEC.md
notebooks/: README.md
notebooks/01_data_research/: market_microstructure.ipynb
notebooks/02_strategy_prototyping/: visualize_strategy_logic.ipynb
s3a_backtester/: __init__.py  cli.py  config.py  data_io.py  engine.py  features.py  filters.py  management.py  metrics.py  monte_carlo.py  portfolio.py  repro.py  run_meta.py  slippage.py  structure.py  time_stop_conditions.py  validator.py  walkforward.py
scripts/: convert_databento_to_parquet.py  data_inventory.py  databento_fetch_continuous.py  debug_signals_qqq.py  generate_tearsheet.py  make_report.py  make_synth_parquet.py  normalize_continuous_to_vendor_parquet.py  profile_run.py  quickstart.ps1  quickstart.sh  setup_notebooks.py  update_interview_results.py  verify_determinism.py
scripts/ci/: make_ci_data.py
scripts/debug_tools/: ab_compare_backtests.py  debug_signals_qqq.py  engine_check.py  verify_determinism.py  verify_determinism_json.py  verify_swings.py
scripts/dev/: debug_signals_qqq.py
scripts/legacy/: convert_databento_to_parquet.py
tests/: __init__.py  conftest.py  test_cli.py  test_cli_integration.py  test_config.py  test_data_io.py  test_edge_cases.py  test_engine.py  test_engine_disqualify_after_unlock.py  test_engine_filters.py  test_engine_generate_signals.py  test_engine_simulate_trades.py  test_engine_triggers.py  test_engine_unlock_zone_trigger.py  test_engine_week3.py  test_engine_zone_touch_mode.py  test_features.py  test_filters.py  test_integration_smoke_mc.py  test_io_rth_resample.py  test_management.py  test_management_session.py  test_management_time.py  test_management_tp.py  test_metrics.py  test_monte_carlo.py  test_refs_vwap.py  test_run_meta.py  test_slippage.py  test_structure.py  test_time_stop_conditions.py  test_walkforward.py  utils.py
