[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-core"
version = "1.0.6"
description = "Deterministic backtester for Strategy 3A (VWAP Trend Pullback)"
readme = "README.md"
requires-python = ">=3.10"

# IMPORTANT:
# Keep this list to *runtime* requirements only.
# Anything used for notebooks, optional data vendors, or interactive tooling
# belongs under [project.optional-dependencies].
dependencies = [
    # Core numerical + data stack (CI/runtime)
    "numpy>=1.26,<2.3",
    "pandas>=2.2,<3.0",
    "pyarrow>=14.0",
    "PyYAML>=6.0,<7.0",
    "scipy>=1.11,<1.16",
]

[project.urls]
Repository = "https://github.com/sukesan7/meridian"

[project.optional-dependencies]
# Local dev + CI tooling (format/lint/type/test)
dev = [
    "mypy>=1.8",
    "pandas-stubs>=2.1",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6.0",
    "types-PyYAML>=6.0",
    "pip-tools>=7.4",
]

# Notebooks / charts / interactive exploration (NOT required at runtime)
notebooks = [
    "ipykernel>=6.29",
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "ipython>=8.18,<9.0",
]

# Optional: Databento ingestion pipeline (only if you use it)
databento = [
    "databento>=0.29,<1.0",
]

# Optional: terminal / runtime helpers if you truly need them in some scripts
# (leave empty unless you actually import these in the core package)
runtime-extras = [
    # "pexpect>=4.9.0",
    # "contourpy>=1.2,<1.3",
    # "async-timeout>=4.0.3",
]

[project.scripts]
meridian-run = "s3a_backtester.cli:main"

[tool.setuptools.packages.find]
include = ["s3a_backtester*"]
exclude = ["tests*", "data*", "configs*", "outputs*", "notebooks*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["notebooks", "scripts"]
disallow_any_generics = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
warn_return_any = false
